working with managed arq cont